...
                                <rect key="frame" x="19" y="716" width="168" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="ZeroButton"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="168" id="7ie-Sk-hXV"/>
...
                                <rect key="frame" x="195" y="628" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonThree"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="9Nq-VL-jJB"/>
...
                                <rect key="frame" x="19" y="628" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonOne"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="Die-aL-UYn"/>
...
                                <rect key="frame" x="19" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonFour"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="NfY-Bm-HgM"/>
...
                                <rect key="frame" x="107" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="0.26051741839999998" green="0.2605243921" blue="0.260520637" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonFive"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="wFX-Ds-cAN"/>
...
                                <rect key="frame" x="283" y="716" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonEquals"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="OyU-wd-zXq"/>
...
                                <rect key="frame" x="283" y="540" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonMinus"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="CFJ-G6-YEw"/>
...
                                <rect key="frame" x="283" y="452" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonMultiple"/>
                                <constraints>
                                    <constraint firstAttribute="height" constant="80" id="5gK-BC-Umh"/>
...
                                <rect key="frame" x="283" y="364" width="80" height="80"/>
                                <color key="backgroundColor" red="1" green="0.14913141730000001" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                <accessibility key="accessibilityConfiguration" identifier="buttonDivide"/>
                                <constraints>
                                    <constraint firstAttribute="width" relation="greaterThanOrEqual" constant="80" id="7mb-5J-6uj"/>
...
                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="right" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="aKf-d9-pYb">
                                <rect key="frame" x="34" y="306" width="324" height="50"/>
                                <accessibility key="accessibilityConfiguration" identifier="resultString"/>
                                <color key="tintColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                <state key="normal" title="Button"/>
...
